Use retry logic in all file settings ITs